resolve css conflict causing layout problem

--- a/style.css
+++ b/style.css
@@ -7,22 +7,16 @@
     scroll-behavior: smooth;
     text-decoration: none;
 }
+
 header{
-    
+    width: 100%;
     height: auto;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    
-}
-.container{
-    width: 1440px;
-    margin-left: 5%;
+    background-color: hsl(207, 100%, 98%);
     display: block;
     justify-content: center;
     align-items: center;
     position: relative;
-    border: none;
+    
 }
 .navbar{
     display: flex;
@@ -40,9 +34,9 @@ header{
 .navbar .action_btn{
     position: absolute;
     top: 20px;
-    left: 90%;
-    background-color: hsl(207, 100%, 98%);
-    padding: 0.7rem 1.5rem;
+    left: 85%;
+    height: 40px;
+    padding: 0.5rem 1.5rem;
     color: hsl(322, 100%, 66%);
     border: 1px solid hsl(322, 100%, 66%);
     border-radius: 30px;
@@ -86,10 +80,14 @@ button{
     border-radius: 25px;
     width: 28%;
     height: 45px;
+    cursor: pointer;
     margin-top: 30px;
     margin-left: 5%;
     font-weight: 600;
     font-family: 'Open Sans',sans-serif;
+}
+button:hover {
+    background-color: hsl(321, 100%, 78%);
 }
 .communities{
     display: block;
@@ -129,25 +127,20 @@ button{
     margin: 5px 75% 2px 2px;
 }
 .about{
-    background: url(/images/bg-section-top-desktop-1.svg);
+    background: url(/images/bg-section-top-desktop-1.svg), url(/images/bg-section-bottom-desktop-1.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: center top, center bottom;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 100px;
 }
 .text-area{
-   background: url(/images/bg-section-top-desktop-2.svg);
-   background-position: inherit;
-   background-repeat: no-repeat;
-   background-size: cover;
    display: flex;
 }
 .text{
-    margin-top: 25%;
-    margin-left: 50px;
+    margin: auto 5rem;
     display: block;
     justify-content: center;
     align-items: center;
@@ -171,13 +164,12 @@ button{
     justify-content: center;
     align-items: center;
     margin-top: 100px;
-    margin-left: 1%;
 }
 .text-area2{
     display: flex;
 }
 .text2{
-    margin-top: 20%;
+    margin: auto 5rem;
     justify-content: center;
     align-items: center;
 }
@@ -191,10 +183,11 @@ button{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
-.text-image2{
-    max-width: 1050px;
-}
 .about3{
+    background: url(/images/bg-section-top-desktop-2.svg), url(/images/bg-section-bottom-desktop-2.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top, center bottom;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,12 +196,8 @@ button{
 .text-area3{
     display: flex;
 }
-.text-image3{
-    max-width: 1400px;
-}
 .text3{
-    margin-top: 20%;
-    margin-left: 60px;
+    margin: auto 5rem;
     color: hsl(192, 100%, 9%);
 }
 .text3 h2{
@@ -228,7 +217,7 @@ button{
     text-align: center;
     margin-top: 10%;
 }
-.build h2{
+.build h1{
     font-family: 'poppins', sans-serif;
     font-weight: 700;
 }
@@ -236,6 +225,7 @@ button{
     width: 16%;
     height: 45px;
     margin-left: 0;
+    cursor: pointer;
     font-weight: 600;
     font-family: 'Open Sans',sans-serif;
 }
@@ -257,15 +247,15 @@ button{
     width: 25%;
     padding: 20px;
     font-family: 'Open Sans', sans-serif;
-    margin: 20% 0 0 80px;
+    margin: 20% 0 0 10%;
 }
-.contact img{
-   background-color: hsl(207, 100%, 98%);
-   color: hsl(207, 100%, 98%);
-}
-.contact p{
-    margin-top: 30px;
-    size: 20px;
+.contact{
+    display: flex;
+    font-family: 'Poppins' sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10%;
+   
 }
 .contact1{
     display: flex;
@@ -288,11 +278,11 @@ button{
     justify-content: center;
     align-items: center;
     width: 27%;
-    margin: 20% 10% 0 0;
-    padding: 10px;
+    margin-right: 15%;
+    margin-top: 20%;
     
 }
-.newsletter h3{
+.newsletter h2{
     font-weight: 700;
     font-family: 'poppins', sans-serif;
     margin-bottom: 10px;
@@ -312,6 +302,8 @@ input{
     border-radius: 5px;
     height: 35px;
     margin-top: 30px;
+    padding: auto;
+    border: none;
 }
 .newsletter button:last-of-type{
     border-radius: 5px;
@@ -320,8 +312,8 @@ input{
 .icons{
     display: flex;
     justify-content: space-between;
-    width: 80px;
-    font-size: 20px;
+    width: 100px;
+    font-size: 25px;
     margin-top: 30px;
 }
 .icons a{
@@ -334,6 +326,4 @@ input{
 .attribution a{
     color: hsl(228, 45%, 44%); 
 }
-
-
 
